# dat-telemetry

./: Dockerfile  Dockerfile-dev  README.md  msg.json  pyproject-dev.toml  pyproject.toml
src/: main.py  std_lib.py
src/pydantic_models/: telemetry_msg.py
